<resources>
    <string name="app_name" translatable="false">vRelay</string>
    <string name="url_home" translatable="false">http://iot.oster.com.ua</string>

    <!-- -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- -->
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>

    <!-- edit profile fragment strings -->
    <string name="fragment_profile_title">Edit profile</string>
    <string name="fragment_profile_profilename">Profile name:</string>
    <string name="fragment_profile_hostname">Hostname or IP:</string>
    <string name="fragment_profile_login">Login:</string>
    <string name="fragment_profile_password">Password:</string>
    <string name="fragment_profile_port">Port:</string>
    <string name="fragment_profile_default">Use default:</string>
    <string name="fragment_profile_enable">Enable:</string>
</resources>

