<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2020 Vladimir Vons
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/material_screen_edge_spacing"
            android:paddingEnd="@dimen/material_screen_edge_spacing"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/fragment_profile_profilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/fragment_profile_profilename"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/fragment_profile_hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:hint="@string/fragment_profile_hostname"
                android:autofillHints="" />

            <EditText
                android:id="@+id/fragment_profile_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/fragment_profile_port"
                android:autofillHints="" />

            <EditText
                android:id="@+id/fragment_profile_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/fragment_profile_login"
                android:autofillHints="" />

            <EditText
                android:id="@+id/fragment_profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_profile_password"
                android:inputType="textPassword"
                android:autofillHints="" />

            <Switch
                android:id="@+id/fragment_profile_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_enable"
                />

            <Switch
                android:id="@+id/fragment_profile_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profile_default"
                />
        </LinearLayout>
</ScrollView>
